--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>  
             </div>             
             <div class="container">
-                <div id="credifoz" class="item"> </div>
+                <div id="credifoz" class="item"> <a href="#" class="fill-div">&nbsp;</a></div>
                 <div id="unilos" class="item">   </div>
                 <div id="viacredi" class="item"> </div>
             </div>
