--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 </div>  
             </div>             
             <div class="container">
-                <div id="credifoz" class="item"> <a href="#" class="fill-div">&nbsp;</a></div>
-                <div id="unilos" class="item">   </div>
-                <div id="viacredi" class="item"> </div>
+                <div id="credifoz" class="item"><a href="#" class="fill-div">&nbsp;</a></div>
+                <div id="unilos" class="item"><a href="#" class="fill-div">&nbsp;</a></div>
+                <div id="viacredi" class="item"><a href="https://outlook.office365.com/owa/calendar/ConsultoriaSebrae@ailos.onmicrosoft.com/bookings/" class="fill-div">&nbsp;</a></div>
             </div>
             <footer class="footer">
                 <img src="images/logo-ailos-white.svg" alt="Ailos Logo branca" height="48" width="121" />
