--- a/index.html
+++ b/index.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-    <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Atendimento Remoto - Ailos</title>
+</head>
+
+<body>
+
+    <head>
+        <div id="bannerazul"></div>
+        <div id="elementograficoDireita">
+            <img id="graficoTopo" src="images/topo direita.webp" alt="elemento colorido da direita">
+        </div>
+        <div id="elementograficoEsquerda"></div>
     </head>
-    <body>
-        <head>
-            <div id="bannerazul"></div>
-            <div id="elementograficoDireita">
-                <img id="graficoTopo" src="images/topo direita.webp" alt="elemento colorido da direita">
-            </div>
-            <div id="elementograficoEsquerda"></div>
-        </head>
-        <main>
-            <h1>Atendimento Remoto</h1>  
-            <div id="content-core">
-                <img src="images/em breve.jpeg" alt="em breve" title="em breve" height="200" width="200" />
-                <h2><span class="tituloazul">Selecione a sua Cooperativa Ailos.</span> <br /><span class="titulolaranja">faça o agendamento do seu atendimento remoto</span></h2>
-                <div class="container">
-                    <div class="textoapoio">
-                        Nós estamos por toda a parte. Compartilhamos conhecimento, emoções, sonhos e soluções. Somos empreendedores, colaboradores. Tiramos ideias do papel, enxergamos oportunidades. Com este proposito em sempre inovar, estamos levando até você o nosso consultor, para sua comodidade e dessa forma seguirmos transformando o mundo. <br />
-                        <span class="negrito"><br />Selecione abaixo a sua cooperativa, agende seu atendimento no melhor horário e basta se programar para o dia e hora escolhidos.</span>
-                    </div> 
-                    <div class="fotoentrada"> </div>
-                </div>  
-            </div>             
+    <main>
+        <h1>Atendimento Remoto</h1>
+        <div id="content-core">
+            <img src="images/em breve.jpeg" alt="em breve" title="em breve" height="200" width="200" />
+            <h2><span class="tituloazul">Selecione a sua Cooperativa Ailos.</span> <br /><span class="titulolaranja">faça o agendamento do seu atendimento remoto</span></h2>
             <div class="container">
-                <div id="credifoz" class="item"><a href="#" class="fill-div">&nbsp;</a></div>
-                <div id="unilos" class="item"><a href="interno1.html" class="fill-div">&nbsp;</a></div>
-                <div id="viacredi" class="item"><a href="https://outlook.office365.com/owa/calendar/ConsultoriaSebrae@ailos.onmicrosoft.com/bookings/" class="fill-div">&nbsp;</a></div>
-            </div>
-            <footer class="footer">
-                <img src="images/logo-ailos-white.svg" alt="Ailos Logo branca" height="48" width="121" />
-                <div class="footer-copyright">
-                    Cooperativa Central de Crédito Ailos - CNPJ 05.463.212/0001-29<br>
-                    Rua General Osório, 1180, Velha, CEP 89041-002, Blumenau/SC.                    <br>
-                    2021 Sistema Ailos. Todos os direitos reservados. 
+                <div class="textoapoio">
+                    Nós estamos por toda a parte. Compartilhamos conhecimento, emoções, sonhos e soluções. Somos empreendedores, colaboradores. Tiramos ideias do papel, enxergamos oportunidades. Com este proposito em sempre inovar, estamos levando até você o nosso consultor,
+                    para sua comodidade e dessa forma seguirmos transformando o mundo. <br />
+                    <span class="negrito"><br />Selecione abaixo a sua cooperativa, agende seu atendimento no melhor horário e basta se programar para o dia e hora escolhidos.</span>
                 </div>
-            </footer>
-        </main>
-    </body>
+                <div class="fotoentrada"> </div>
+            </div>
+        </div>
+        <div class="container">
+            <div id="credifoz" class="item"><a href="#" class="fill-div">&nbsp;</a></div>
+            <div id="unilos" class="item"><a href="interno1.html" class="fill-div">&nbsp;</a></div>
+            <div id="viacredi" class="item"><a href="https://outlook.office365.com/owa/calendar/ConsultoriaSebrae@ailos.onmicrosoft.com/bookings/" class="fill-div">&nbsp;</a></div>
+        </div>
+        <footer class="footer">
+            <img src="images/logo-ailos-white.svg" alt="Ailos Logo branca" height="48" width="121" />
+            <div class="footer-copyright">
+                Cooperativa Central de Crédito Ailos - CNPJ 05.463.212/0001-29<br> Rua General Osório, 1180, Velha, CEP 89041-002, Blumenau/SC. <br> 2021 Sistema Ailos. Todos os direitos reservados.
+            </div>
+        </footer>
+    </main>
+</body>
+
 </html>
