--- a/bs/index.html
+++ b/bs/index.html
@@ -10,7 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700;900&family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
-    <link href="css/main.css" rel="stylesheet" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/config.css" rel="stylesheet" />
+    <link href="css/custom.css" rel="stylesheet" />
 
     <title>Sistema de Cooperativas de Crédito - AILOS | Atendimento Remoto</title>
 </head>
@@ -23,7 +25,7 @@
                 <a class="navbar-brand " href="# ">
                     <img src="../images/logo-ailos-white.svg " alt=" " height="45 ">
                 </a>
-                <button class="navbar-toggler " type="button " data-bs-toggle="collapse " data-bs-target="#navbarNav " aria-controls="navbarNav " aria-expanded="false " aria-label="Toggle navigation ">
+                <button class="navbar-toggler bg-light " type="button " data-bs-toggle="collapse " data-bs-target="#navbarNav " aria-controls="navbarNav " aria-expanded="false " aria-label="Toggle navigation ">
                 <span class="navbar-toggler-icon "></span>
               </button>
                 <div class="collapse navbar-collapse " id="navbarNav ">
@@ -32,7 +34,9 @@
                             <a class="nav-link active " aria-current="page " href="# ">Início</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle " href="# " id="navbarScrollingDropdown " role="button " data-bs-toggle="dropdown " aria-expanded="false ">Sobre o Experimento</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Sobre o Experimento
+                              </a>
                             <ul class="dropdown-menu " aria-labelledby="navbarScrollingDropdown ">
                                 <li><a class="dropdown-item " href="# ">Como Funciona</a></li>
                                 <li><a class="dropdown-item " href="# ">Quais Cooperativas estão participando</a></li>
