--- a/bs/index.html
+++ b/bs/index.html
@@ -10,9 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700;900&family=Open+Sans:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
 
     <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/config.css" rel="stylesheet" />
-    <link href="css/custom.css" rel="stylesheet" />
+    <link href="bs/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="bs/css/config.css" rel="stylesheet" />
+    <link href="bs/css/custom.css" rel="stylesheet" />
 
     <title>Sistema de Cooperativas de Crédito - AILOS | Atendimento Remoto</title>
 </head>
