--- a/bs/index.html
+++ b/bs/index.html
@@ -54,7 +54,19 @@
             </nav>
         </div>
     </div>
-    <!-- HEADER -->
+    <!-- /HEADER -->
+    <!-- CONTEUDO -->
+    <div class="container-fluid">
+        <h1 class="text-center modal-title">ATENDIMENTO REMOTO</h1>
+    </div>
+    <div id="blocos" class="container">
+        <div class="row">
+            <div class="col">Nós estamos por toda a parte. Compartilhamos conhecimento, emoções, sonhos e soluções. Somos empreendedores, colaboradores. Tiramos ideias do papel, enxergamos oportunidades. Com este proposito em sempre inovar, estamos levando até você o
+                nosso consultor, para sua comodidade e dessa forma seguirmos transformando o mundo.</div>
+            <div class="col"><img class="img-fluid rounded mx-auto d-block" src="imagens/entrada.png" /></div>
+        </div>
+    </div>
+    <!-- /CONTEUDO -->
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
