correção do link imagens

--- a/bs/index.html
+++ b/bs/index.html
@@ -63,7 +63,7 @@
         <div class="row">
             <div class="col">Nós estamos por toda a parte. Compartilhamos conhecimento, emoções, sonhos e soluções. Somos empreendedores, colaboradores. Tiramos ideias do papel, enxergamos oportunidades. Com este proposito em sempre inovar, estamos levando até você o
                 nosso consultor, para sua comodidade e dessa forma seguirmos transformando o mundo.</div>
-            <div class="col"><img class="img-fluid rounded mx-auto d-block" src="imagens/entrada.png" /></div>
+            <div class="col"><img class="img-fluid rounded mx-auto d-block" src="bs/imagens/entrada.png" /></div>
         </div>
     </div>
     <!-- /CONTEUDO -->
