--- a/bs/index.html
+++ b/bs/index.html
@@ -64,7 +64,7 @@
     </div>
     <div id="blocos" class="container p-2">
         <div class="clearfix fst-italic">
-            <img src="imagens/entrada.png" class="col-md-6 float-md-end mb-3 ms-md-3 p-1" alt="...">
+            <img src="../images/entrada.png" class="col-md-6 float-md-end mb-3 ms-md-3 p-1" alt="...">
 
             <p>
                 Nós estamos por toda a parte. Compartilhamos conhecimento, emoções, sonhos e soluções. Somos empreendedores, colaboradores. Tiramos ideias do papel, enxergamos oportunidades.
