tamanhos dos box cooperativas

--- a/bs/index.html
+++ b/bs/index.html
@@ -83,17 +83,17 @@
     <div class="container">
         <div class="row row-cols-1 row-cols-md-3 g-4 ">
             <div class="col">
-                <div class="card h-100 shadow border-2">
+                <div class="card h-100 shadow border-2 w-25">
                     <img src="../images/credifoz.png" class="card-img-top" alt="...">
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 shadow border-2">
+                <div class="card h-100 shadow border-2 w-25">
                     <img src="../images/unilos.png" class="card-img-top" alt="...">
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 shadow border-2">
+                <div class="card h-100 shadow border-2 w-25">
                     <img src="../images/viacredi.png" class="card-img-top" alt="...">
                 </div>
             </div>
