alinhar icones no centro

--- a/bs/index.html
+++ b/bs/index.html
@@ -81,7 +81,7 @@
     </div>
     <!-- CARDS COOPERATIVAS -->
     <div class="container">
-        <div class="row row-cols-1 row-cols-md-3 g-4 ">
+        <div class="row row-cols-1 row-cols-md-3 g-4 align-items-center ">
             <div class="col">
                 <div class="card h-100 shadow border-2 w-75">
                     <img src="../images/credifoz.png" class="card-img-top" alt="...">
