texto lateral sobre experimento

--- a/bs/index.html
+++ b/bs/index.html
@@ -73,6 +73,8 @@
             <p>
                 Com este proposito em sempre inovar, estamos levando até você o nosso consultor, para sua comodidade e dessa forma seguirmos transformando o mundo
             </p>
+            <p>A atendimento remoto é uma iniciativa da Central Ailos através do laboratório de inovação. Você foi um dos nosso cooperados para experimentar este novo canal de atendimento. Ao final do seu atendimento colabore com nossa pesquisa para que
+                possamos identificar e validar melhorias e juntos fazer cada vez melhor. </p>
         </div>
         <h2 class="text-primary modal-title">
             SELECIONE SUA COOPERATIVA
