teste de link css cooperativa

--- a/bs/index.html
+++ b/bs/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="col">
                 <div class="card h-100 shadow border-2 w-75">
-                    <img src="../images/unilos.png" class="card-img-top" alt="...">
+                    <a href="interno1.html"><img src="../images/unilos.png" class="card-img-top" alt="..."></a>
                 </div>
             </div>
             <div class="col">
