--- a/unilos.html
+++ b/unilos.html
@@ -59,49 +59,52 @@
     </div>
     <!-- /HEADER -->
     <!-- CONTEUDO -->
+    <!-- SLIDER -->
+    <div id="myCarousel" class="carousel slide " data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="images/creditoPessoalFamilia.png" class="d-block w-100" " />
+
+                <div class="container ">
+
+                </div>
+            </div>
+            <div class="carousel-item ">
+                <img src="images/creditocarro.png " class="d-block w-100 "" />
+
+                <div class="container">
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="images/microcredito.png" class="d-block w-100" />
+
+                <div class="container">
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+    </div>
+    <!-- SLIDER FIM  -->
+
     <div class="container-fluid">
-        <h1 class="text-center modal-title p-3 p-lg-5">ATENDIMENTO REMOTO</h1>
+        <h1 class="text-center modal-title p-1 p-lg-1">ATENDIMENTO REMOTO</h1>
     </div>
-    <div id="blocos" class="container p-2">
-        <div class="clearfix fst-italic">
-            <img src="images/entrada.png" class="col-md-6 float-md-end mb-3 ms-md-3 p-1" alt="...">
+    <div class="container ratio ratio-1x1">
+        <iframe src='https://outlook.office365.com/owa/calendar/ConsultoriaSebrae@ailos.onmicrosoft.com/bookings/' width="100%" scrolling='yes' style='border:0'></iframe>
 
-            <p>
-                Nós estamos por toda a parte. Compartilhamos conhecimento, emoções, sonhos e soluções. Somos empreendedores, colaboradores. Tiramos ideias do papel, enxergamos oportunidades.
-            </p>
-
-            <p>
-                Com este proposito em sempre inovar, estamos levando até você o nosso consultor, para sua comodidade e dessa forma seguirmos transformando o mundo
-            </p>
-            <p>A atendimento remoto é uma iniciativa da Central Ailos através do laboratório de inovação. Você foi um dos nosso cooperados para experimentar este novo canal de atendimento. Ao final do seu atendimento colabore com nossa pesquisa para que
-                possamos identificar e validar melhorias e juntos fazer cada vez melhor. </p>
-        </div>
-        <h2 class="text-primary modal-title">
-            SELECIONE SUA COOPERATIVA
-        </h2>
-        <h2 class="text-secondary modal-title">E FAÇA SEU AGENDAMENTO</h2>
     </div>
-    <!-- CARDS COOPERATIVAS -->
-    <div class="container">
-        <div class="row row-cols-1 row-cols-md-3 g-4 align-items-center ">
-            <div class="col">
-                <div class="card h-100 shadow border-2 w-75">
-                    <img src="images/credifoz.png" class="card-img-top" alt="...">
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100 shadow border-2 w-75">
-                    <a href="unilos.html"><img src="images/unilos.png" class="card-img-top" alt="..."></a>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100 shadow border-2 w-75">
-                    <img src="images/viacredi.png" class="card-img-top" alt="...">
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /CARDS COOPERATIVAS -->
     <!-- /CONTEUDO -->
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -114,7 +117,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js " integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/ " crossorigin="anonymous "></script>
     -->
 
-    <div class="container-fluid">
+    <div class="container-fluid float-end">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top bg-primary">
             <div class="container">
                 <div class="row">
