banner no index

--- a/index.html
+++ b/index.html
@@ -60,7 +60,17 @@
     <!-- /HEADER -->
     <!-- CONTEUDO -->
     <div class="container-fluid">
-        <h1 class="text-center modal-title p-3 p-lg-5">ATENDIMENTO REMOTO</h1>
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/Banner_ailos_home_1920x400.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1 class="text-center modal-title p-3 p-lg-5">ATENDIMENTO REMOTO</h1>
+                        <p>Comodidade em uma nova experiência para você.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="blocos" class="container p-2">
         <div class="clearfix fst-italic">
