--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <img src="images/Banner_ailos_home_1920x400.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h1 class="text-center modal-title p-3 p-lg-5">ATENDIMENTO REMOTO</h1>
-                        <p>Comodidade em uma nova experiência para você.</p>
+                        <p>Fazemos parte da economia colaborativa que transforma a sua vida e a de todos ao seu redor. Buscamos a inovação, e nasce assim o atendimento remoto. Um experimento para você, nosso cooperado.</p>
                     </div>
                 </div>
             </div>
