--- a/index.html
+++ b/index.html
@@ -77,14 +77,8 @@
             <img src="images/entrada.png" class="col-md-6 float-md-end mb-3 ms-md-3 p-1" alt="...">
 
             <p>
-                Nós estamos por toda a parte. Compartilhamos conhecimento, emoções, sonhos e soluções. Somos empreendedores, colaboradores. Tiramos ideias do papel, enxergamos oportunidades.
-            </p>
-
-            <p>
-                Com este proposito em sempre inovar, estamos levando até você o nosso consultor, para sua comodidade e dessa forma seguirmos transformando o mundo
-            </p>
-            <p>A atendimento remoto é uma iniciativa da Central Ailos através do laboratório de inovação. Você foi um dos nosso cooperados para experimentar este novo canal de atendimento. Ao final do seu atendimento colabore com nossa pesquisa para que
-                possamos identificar e validar melhorias e juntos fazer cada vez melhor. </p>
+                O atendimento remoto é um experimento proveniente do desdobramento da frente de atuação que visa modernizar a experiencia dos cooperados no PA, também conhecido PA do Futuro.</p>
+            <p>O atendimento remoto trata-se da criação de um novo canal de atendimento para os cooperados, onde ele possa ser atendido de forma remota, através de vídeo chamadas.</p>
         </div>
         <h2 class="text-primary modal-title">
             SELECIONE SUA COOPERATIVA
