--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4 align-items-center ">
             <div class="col">
                 <div class="card h-100 shadow border-2 w-75">
-                    <img src="images/credifoz.png" class="card-img-top" alt="...">
+                    <a href="credifoz.html"><img src="images/credifoz.png" class="card-img-top" alt="..."></a>
                 </div>
             </div>
             <div class="col">
@@ -100,7 +100,7 @@
             </div>
             <div class="col">
                 <div class="card h-100 shadow border-2 w-75">
-                    <img src="images/viacredi.png" class="card-img-top" alt="...">
+                    <a href="viacredi.html"><img src="images/viacredi.png" class="card-img-top" alt="..."></a>
                 </div>
             </div>
         </div>
