imagens da index ajustada de tamanho (menor)

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div id="blocos" class="container p-2">
         <div class="clearfix fst-italic">
-            <img src="images/entrada.png" class="col-md-6 float-md-end mb-3 ms-md-3 p-1" alt="...">
+            <img src="images/entrada menor.png" class="col-md-6 float-md-end mb-3 ms-md-3 p-1" alt="...">
 
             <p>
                 O atendimento remoto é um experimento proveniente do desdobramento da frente de atuação que visa modernizar a experiencia dos cooperados no PA, também conhecido PA do Futuro.</p>
