--- a/viacredi.html
+++ b/viacredi.html
@@ -25,7 +25,7 @@
     <div id="header">
         <div class="container ">
             <nav class="navbar navbar-expand-lg navbar-light justify-content-between bg-primary ">
-                <a class="navbar-brand " href="# ">
+                <a class="navbar-brand " href="index.html">
                     <img src="images/logo-ailos-white.svg" alt=" " height="45 ">
                 </a>
                 <button class="navbar-toggler bg-light " type="button " data-bs-toggle="collapse " data-bs-target="#navbarNav " aria-controls="navbarNav " aria-expanded="false " aria-label="Toggle navigation ">
