--- a/viacredi.html
+++ b/viacredi.html
@@ -23,39 +23,38 @@
 <body>
     <!-- HEADER -->
     <div id="header">
-        <div class="container ">
-            <nav class="navbar navbar-expand-lg navbar-light justify-content-between bg-primary ">
-                <a class="navbar-brand " href="index.html">
-                    <img src="images/logo-ailos-white.svg" alt=" " height="45 ">
-                </a>
-                <button class="navbar-toggler bg-light " type="button " data-bs-toggle="collapse " data-bs-target="#navbarNav " aria-controls="navbarNav " aria-expanded="false " aria-label="Toggle navigation ">
-                <span class="navbar-toggler-icon "></span>
-              </button>
-                <div class="collapse navbar-collapse " id="navbarNav ">
-                    <ul class="navbar-nav ">
-                        <li class="nav-item ">
-                            <a class="nav-link active " aria-current="page " href="index.html">Início</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="images/logo-ailos-white.svg" alt=" " height="45 " /></a>
+                <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Início</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Sobre o Experimento
-                              </a>
-                            <ul class="dropdown-menu " aria-labelledby="navbarScrollingDropdown ">
-                                <li><a class="dropdown-item " href="# ">Como Funciona</a></li>
-                                <li><a class="dropdown-item " href="# ">Quais Cooperativas estão participando</a></li>
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Sobre o Experimento
+                </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <li><a class="dropdown-item" href="#">Como Funciona</a></li>
+                                <li><a class="dropdown-item" href="#">Quais cooperativas estão participando/a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
                                 <li>
                                     <hr class="dropdown-divider ">
                                 </li>
                                 <li><a class="dropdown-item " href="# ">Dúvidas Frequentes</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item ">
-                            <a class="nav-link " href="# ">Contato</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contato</a>
                         </li>
                     </ul>
                 </div>
-            </nav>
-        </div>
+            </div>
+        </nav>
     </div>
     <!-- /HEADER -->
     <!-- CONTEUDO -->
