--- a/credifoz.html
+++ b/credifoz.html
@@ -25,7 +25,7 @@
     <div id="header">
         <nav class="navbar navbar-expand-lg navbar-light bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="images/logo-ailos-white.svg" alt=" " height="45 " /></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo-ailos-white.svg" alt=" " height="45 " /></a>
                 <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -39,13 +39,8 @@
                   Sobre o Experimento
                 </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Como Funciona</a></li>
-                                <li><a class="dropdown-item" href="#">Quais cooperativas estão participando/a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                <li>
-                                    <hr class="dropdown-divider ">
-                                </li>
-                                <li><a class="dropdown-item " href="# ">Dúvidas Frequentes</a></li>
+                                <li><a class="dropdown-item" href="how.html#sobre">Como Funciona</a></li>
+                                <li><a class="dropdown-item" href="how.html#coops">Quais cooperativas estão participando</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -59,41 +54,18 @@
     <!-- /HEADER -->
     <!-- CONTEUDO -->
     <!-- SLIDER -->
-    <div id="myCarousel" class="carousel slide " data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="images/creditoPessoalFamilia.png" class="d-block w-100" " />
-
-                <div class="container ">
-
-                </div>
-            </div>
-            <div class="carousel-item ">
-                <img src="images/creditocarro.png " class="d-block w-100 "" />
-
-                <div class="container">
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="images/microcredito.png" class="d-block w-100" />
-
-                <div class="container">
+    <div class="container-fluid">
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/Banner_ailos_home_1920x400.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1 class="text-center modal-title p-3 p-lg-5">ATENDIMENTO REMOTO</h1>
+                        <p>Fazemos parte da economia colaborativa que transforma a sua vida e a de todos ao seu redor. Buscamos a inovação, e nasce assim o atendimento remoto. Um experimento para você, nosso cooperado.</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
     </div>
     <!-- SLIDER FIM  -->
 
