--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="header">
         <nav class="navbar navbar-expand-lg navbar-light bg-primary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="images/logo-ailos-white.svg" alt=" " height="45 " /></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo-ailos-white.svg" alt=" " height="45 " /></a>
                 <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -39,13 +39,8 @@
                   Sobre o Experimento
                 </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Como Funciona</a></li>
-                                <li><a class="dropdown-item" href="#">Quais cooperativas estão participando/a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                <li>
-                                    <hr class="dropdown-divider ">
-                                </li>
-                                <li><a class="dropdown-item " href="# ">Dúvidas Frequentes</a></li>
+                                <li><a class="dropdown-item" href="how.html#sobre">Como Funciona</a></li>
+                                <li><a class="dropdown-item" href="how.html#coops">Quais cooperativas estão participando</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
