--- a/viacrediAgenda.html
+++ b/viacrediAgenda.html
@@ -53,6 +53,7 @@
     </div>
     <!-- /HEADER -->
     <!-- CONTEUDO -->
+    <!-- SLIDER -->
     <div class="container-fluid">
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -60,41 +61,17 @@
                     <img src="images/Banner_ailos_home_1920x400.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h1 class="text-center modal-title p-3 p-lg-5">ATENDIMENTO REMOTO</h1>
-                        <p class="fs-3">Fazemos parte da economia colaborativa que transforma a sua vida e a de todos ao seu redor. Buscamos a inovação, e nasce assim o atendimento remoto. Um experimento para você, nosso cooperado.</p>
+                        <p>Fazemos parte da economia colaborativa que transforma a sua vida e a de todos ao seu redor. Buscamos a inovação, e nasce assim o atendimento remoto. Um experimento para você, nosso cooperado.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div id="blocos" class="container p-2">
-        <div class="clearfix fst-italic">
-            <img src="images/entrada menor.png" class="col-md-6 float-md-end mb-3 ms-md-3 p-1" alt="...">
+    <!-- SLIDER FIM  -->
+    <div class="container ratio ratio-1x1">
+        <iframe src='https://outlook.office365.com/owa/calendar/Viacredi1@ailos.onmicrosoft.com/bookings/' width="100%" scrolling='yes' style='border:0'></iframe>
 
-            <p>
-                O atendimento remoto é um experimento proveniente do desdobramento da frente de atuação que visa modernizar a experiencia dos cooperados no PA, também conhecido PA do Futuro.</p>
-            <p>O atendimento remoto trata-se da criação de um novo canal de atendimento para os cooperados, onde ele possa ser atendido de forma remota, através de vídeo chamadas.</p>
-        </div>
-        <h2 class="text-primary modal-title">
-            SELECIONE SUA COOPERATIVA
-        </h2>
-        <h2 class="text-secondary modal-title">E FAÇA SEU AGENDAMENTO</h2>
     </div>
-    <!-- CARDS COOPERATIVAS -->
-    <div class="container">
-        <div class="row row-cols-1 row-cols-md-2 g-4 align-items-center ">
-            <div class="col">
-                <div class="card h-100 shadow border-2 w-75 mx-auto">
-                    <a href="credcrea.html"><img src="images/credcrea.png" class="card-img-top" alt="..."></a>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100 shadow border-2 w-75 mx-auto">
-                    <a href="viacredi.html"><img src="images/viacredi.png" class="card-img-top" alt="..."></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /CARDS COOPERATIVAS -->
     <!-- /CONTEUDO -->
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -107,7 +84,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js " integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/ " crossorigin="anonymous "></script>
     -->
 
-    <div class="container-fluid">
+    <div class="container-fluid float-end">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top bg-primary">
             <div class="container">
                 <div class="row">
