--- a/viacredi.html
+++ b/viacredi.html
@@ -17,7 +17,7 @@
     <link href="css/custom.css" rel="stylesheet" />
 
 
-    <title>Sistema de Cooperativas de Crédito - AILOS | Atendimento Remoto</title>
+    <title>Sistema de Cooperativas de Crédito - AILOS |CREDCREA - Atendimento Remoto</title>
 </head>
 
 <body>
@@ -27,8 +27,8 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img src="images/logo-ailos-white.svg" alt=" " height="45 " /></a>
                 <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+        <span class="navbar-toggler-icon"></span>
+      </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -36,8 +36,8 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Sobre o Experimento
-                </a>
+              Sobre o Experimento
+            </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <li><a class="dropdown-item" href="how.html#sobre">Como Funciona</a></li>
                                 <li><a class="dropdown-item" href="how.html#coops">Quais cooperativas estão participando</a></li>
@@ -54,28 +54,68 @@
     <!-- /HEADER -->
     <!-- CONTEUDO -->
     <!-- SLIDER -->
-    <div class="container-fluid">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="images/Banner_ailos_home_1920x400.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h1 class="text-center modal-title p-3 p-lg-5">ATENDIMENTO REMOTO</h1>
-                        <p>Fazemos parte da economia colaborativa que transforma a sua vida e a de todos ao seu redor. Buscamos a inovação, e nasce assim o atendimento remoto. Um experimento para você, nosso cooperado.</p>
-                    </div>
+    <div id="myCarousel" class="carousel slide " data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="images/banner.png" class="d-block w-100" />
+
+                <div class="container ">
+
+                </div>
+            </div>
+            <div class="carousel-item ">
+                <img src="images/banner.png " class="d-block w-100 " />
+
+                <div class="container">
                 </div>
             </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
     </div>
     <!-- SLIDER FIM  -->
 
     <div class="container-fluid">
-        <h1 class="text-center modal-title p-1 p-lg-1">ATENDIMENTO REMOTO</h1>
-    </div>
-    <div class="container ratio ratio-1x1">
-        <iframe src='https://outlook.office365.com/owa/calendar/Viacredi1@ailos.onmicrosoft.com/bookings/' width="100%" scrolling='yes' style='border:0'></iframe>
+        <h1 class="text-center modal-title p-1 p-lg-1 text-primary">ATENDIMENTO REMOTO - VIACREDI</h1>
+        <div id="blocos" class="container p-2">
+            <div class="clearfix ">
+                <h2 id="coops" class="text-secondary modal-title">Aqui é no seu tempo</h2>
+                <p>Para essa nova experiência quem escolhe o melhor momento de ser atendido é você, nosso Cooperado. Selecione abaixo uma das opções e vamos juntos.
+                </p>
+                <!-- CARDS MODELOS ATENDIMENTOS -->
+                <div class="container">
+                    <div class="row row-cols-1 row-cols-md-2 g-4 align-items-center ">
+                        <div class="col">
+                            <div class="card h-100 shadow-primary  border-2 w-50 text-center mx-auto bg-primary">
+                                <a href="https://nuvidio.com/viacredi.atendimentoremoto79"><img src="images/videocall.png" class="card-img-top" alt="..."></a>
+                                <h3 class="text-light fw-bold">Quero ser atendido agora</h3>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100 shadow-primary  border-2 w-50 text-center mx-auto bg-primary">
+                                <a href="viacrediAgenda.html"><img src="images/agendar.png" class="card-img-top" alt="..."></a>
+                                <h3 class="text-light fw-bold">Agendar para outro momento</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /CARDS MODELOS ATENDIMENTOS -->
 
+            </div>
+        </div>
     </div>
+
     <!-- /CONTEUDO -->
     <!-- Optional JavaScript; choose one of the two! -->
 
