--- a/credcrea.html
+++ b/credcrea.html
@@ -104,7 +104,7 @@
                         </div>
                         <div class="col">
                             <div class="card h-100 shadow-primary  border-2 w-50 text-center mx-auto bg-primary">
-                                <a href="viacredi.html"><img src="images/agendar.png" class="card-img-top" alt="..."></a>
+                                <a href="viacrediAgenda.html"><img src="images/agendar.png" class="card-img-top" alt="..."></a>
                                 <h3 class="text-light fw-bold">Agendar para outro momento</h3>
                             </div>
                         </div>
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                     <div class="col text-white fs-7">
-                        <p>Cooperativa Central de Crédito Ailos - CNPJ 05.463.212/0001-29 Rua General Osório, 1180, Velha, CEP 89041-002, Blumenau/SC. 2021 Sistema Ailos. Todos os direitos reservados.</p>
+                        <p>Cooperativa Central de Crédito Ailos CNPJ 05.463.212/0001-29 Rua General Osório, 1180, Velha, CEP 89041-002, Blumenau/SC. 2021 Sistema Ailos. Todos os direitos reservados.</p>
                     </div>
                 </div>
             </div>
