--- a/how.html
+++ b/how.html
@@ -85,7 +85,7 @@
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Previous</span>
             </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next"> 
+        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
@@ -173,7 +173,7 @@
                         </div>
                     </div>
                     <div class="col text-white fs-7">
-                        <p>Cooperativa Central de Crédito Ailos - CNPJ 05.463.212/0001-29 Rua General Osório, 1180, Velha, CEP 89041-002, Blumenau/SC. 2021 Sistema Ailos. Todos os direitos reservados.</p>
+                        <p>Cooperativa Central de Crédito Ailos CNPJ 05.463.212/0001-29 Rua General Osório, 1180, Velha, CEP 89041-002, Blumenau/SC. 2021 Sistema Ailos. Todos os direitos reservados.</p>
                     </div>
                 </div>
             </div>
