--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         </div>
                     </div>
                     <div class="col text-white fs-7">
-                        <p>Cooperativa Central de Crédito Ailos - CNPJ 05.463.212/0001-29 Rua General Osório, 1180, Velha, CEP 89041-002, Blumenau/SC. 2021 Sistema Ailos. Todos os direitos reservados.</p>
+                        <p>Cooperativa Central de Crédito Ailos CNPJ 05.463.212/0001-29 Rua General Osório, 1180, Velha, CEP 89041-002, Blumenau/SC. 2021 Sistema Ailos. Todos os direitos reservados.</p>
                     </div>
                 </div>
             </div>
