pagina de agendamento - credcrea

--- a/viacrediAgenda.html
+++ b/viacrediAgenda.html
@@ -60,7 +60,7 @@
                 <div class="carousel-item active">
                     <img src="images/Banner_ailos_home_1920x400.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h1 class="text-center modal-title p-3 p-lg-5">ATENDIMENTO REMOTO</h1>
+                        <h1 class="text-center modal-title p-3 p-lg-5">ATENDIMENTO REMOTO - VIACREDI</h1>
                         <p>Fazemos parte da economia colaborativa que transforma a sua vida e a de todos ao seu redor. Buscamos a inovação, e nasce assim o atendimento remoto. Um experimento para você, nosso cooperado.</p>
                     </div>
                 </div>
